# IAC_Terraform

./: .gitignore  README.md  awr_analysis.py  mlpred.html  rag.html  rea.js
FastAPI/backend/: README.md  auth.py
RAG/: .env.example  .gitignore  README.md  main.py  pyproject.toml
RAG(Retreval agumented genartion)/: .dockerignore  .env  README.md  authMiddleware.js  db.js  docker-compose.yml  improvments.txt  index.js  keycloak.js  list-models.js  package-lock.json  package.json  rag.db  rag.js  server.js
RAG(Retreval agumented genartion)/documents/: ai_history.txt  aws_services.txt  cloud_computing.txt  databases.txt  docker_kubernetes.txt  sample.txt
RAG(Retreval agumented genartion)/public/: auth.html  chat.html
RAG(Retreval agumented genartion)/terraform/: main.tf  outputs.tf  variables.tf
RAG/api/: Dockerfile  main.py
RAG/api/routers/: ingest.py  query.py
RAG/docs/: sample.txt
RAG/src/rag/: __init__.py  config.py  ingestor.py  retriever.py
RAG/tests/: test_ingestor.py  test_retriever.py
RAG/ui/: package-lock.json
Tessell-Oracle-AWS/: .gitignore  DIFFERENCES.md  Makefile  README.md
Tessell-Oracle-AWS/docs/: QUICKSTART.md  README.md
Tessell-Oracle-AWS/examples/: README.md
Tessell-Oracle-AWS/terraform/: backend.tf  locals.tf  main.go  main.tf  mainn.tf  outputs.tf  provider.tf  (+1 more)
Tessell-Oracle-Azure/: Makefile  README.md
Tessell-Oracle-GCP/: Makefile  README.md
postgre-sql-AWS-RDS/: deploy_rds.bat  destroy_rds.bat  main.tf  output.tf  terraform.tfvars  variables.tf
tessell-mongo-ha/: main.tf  outputs.tf  terraform.tfvars  variables.tf
(+22 files in other folders)
