[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "rag-project"
version = "0.1.0"
description = "A professional Retrieval-Augmented Generation (RAG) pipeline"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.2",
    "langchain-community>=0.2",
    "langchain-openai>=0.1",
    "langchain-text-splitters>=0.2",
    "faiss-cpu>=1.8",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
